[package]
authors = ["Idan Dor <idandor@gmail.com>"]
name = "mdbook-ifdef"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Package for ifdef-like capabilities  and removing subsections/chapters from mdbook"
readme = "README.md"
keywords = ["book", "mdbook", "rustbook", "ifdef"]
categories = ["text-processing", "command-line-interface"]
repository = "https://github.com/idandor/mdbook-ifdef"

[[bin]]
name = "mdbook-ifdef"

[dependencies]
clap = {version = "~4", features = ["derive"]}
mdbook = "~0.4"
serde_json = "~1.0"
regex = "~1.10"
pest = "~2.7"
pest_derive = "~2.7"
once_cell = "~1.19"
